manifests/netpol/bouvier-netpols.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-bouvier-to-bouvier
  namespace: bouvier
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          house: bouvier
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-marge-simpson
  namespace: bouvier
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          house: simpson
      podSelector:
        matchLabels:
          app: marge
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: bouvier
spec:
  podSelector: {}
