manifests/netpol/simpson-netpols.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-bouvier-to-marge
  namespace: simpson
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          house: bouvier
  podSelector:
    matchLabels:
      app: marge
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-simpson-to-simpson
  namespace: simpson
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          house: simpson
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: simpson
spec:
  podSelector: {}
